crates/talkbank-direct-parser/tests/snapshots/snapshot_tests__snapshot_word_ca_glottal.snap
---
source: rust/crates/talkbank-direct-parser/tests/snapshot_tests.rs
expression: "(word, errors.to_vec())"
---
(
    None,
    [
        ParseError {
            code: UnparsableContent,
            severity: Error,
            location: SourceLocation {
                span: Span {
                    start: 3,
                    end: 6,
                },
                line: None,
                column: None,
            },
            context: Some(
                ErrorContext {
                    source_text: "hel‡lo",
                    span: Span {
                        start: 3,
                        end: 6,
                    },
                    expected: [],
                    found: "hel‡lo",
                    line_offset: None,
                },
            ),
            labels: [],
            message: "Parse error: found '‡' expected something else, '+', '~', '(', ':', '^', 'ˈ', 'ˌ', '≠', '∾', '⁑', '⤇', '∙', 'Ἡ', '↓', '↻', '↑', '⤆', '∆', '∇', '°', '▁', '▔', '☺', '♋', '⁇', '∬', 'Ϋ', '∮', '↫', '⁎', '◉', '§', '⌈', '⌉', '⌊', '⌋', '\u{2}', form marker, language marker, POS tag, or end of input",
            suggestion: None,
            help_url: Some(
                "https://talkbank.org/errors/E316",
            ),
        },
    ],
)
