crates/talkbank-direct-parser/tests/snapshots/snapshot_tests__snapshot_word_ca_rising.snap
---
source: crates/talkbank-direct-parser/tests/snapshot_tests.rs
expression: "(word, errors.to_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 0,
                end: 8,
            },
            word_id: None,
            raw_text: "wo↑rld",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "wo",
                            ),
                        ),
                    ),
                    CAElement(
                        CAElement {
                            element_type: PitchUp,
                            span: Some(
                                Span {
                                    start: 2,
                                    end: 5,
                                },
                            ),
                        },
                    ),
                    Text(
                        WordText(
                            NonEmptyString(
                                "rld",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
