crates/talkbank-direct-parser/tests/snapshots/snapshot_tests__snapshot_word_compound.snap
---
source: crates/talkbank-direct-parser/tests/snapshot_tests.rs
expression: "(word, errors.to_vec())"
---
(
    Some(
        Word {
            span: Span {
                start: 0,
                end: 8,
            },
            word_id: None,
            raw_text: "wai4+yu3",
            content: WordContents(
                [
                    Text(
                        WordText(
                            NonEmptyString(
                                "wai4",
                            ),
                        ),
                    ),
                    CompoundMarker(
                        WordCompoundMarker {
                            span: Some(
                                Span {
                                    start: 4,
                                    end: 5,
                                },
                            ),
                        },
                    ),
                    Text(
                        WordText(
                            NonEmptyString(
                                "yu3",
                            ),
                        ),
                    ),
                ],
            ),
            category: None,
            form_type: None,
            lang: None,
            part_of_speech: None,
            inline_bullet: None,
            cached_cleaned_text: CachedStr(
                OnceLock(
                    <uninit>,
                ),
            ),
        },
    ),
    [],
)
